[package]
name = "web-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bacon = "2.12.0"
color-eyre = "0.6.2"
futures = "0.3.28"
irust = "1.70.0"
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
leptos_router = "0.4.5"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = "0.7.1"
tracing = "0.1.37"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
